[package]
name = "klv-uas"
version = "0.1.1"
authors = ["Dominic Grimaldi <dominic.j.grimaldi@gmail.com>"]
edition = "2021"
description = "A simple library for parsing UAS KLV data from raw data."
repository = "https://github.com/GrimOutlook/klv-uas"
documentation = "https://docs.rs/klv-uas"
license = "MIT"
keywords = ["parser", "klv", "uas"]
categories = ["multimedia::video", "aerospace::unmanned-aerial-vehicles"]

[dependencies]
bitvec = "1.0.1"
log = { version = "0.4.21", default-features = false, optional = true }
memmem = { version = "0.1.1", default-features = false, optional = true }
strum = "0.26.2"
strum_macros = "0.26.4"

[dev-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
clap_derive = "4.5.11"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
test-case = "3.3.1"
ts-analyzer = { path = "../ts-analyzer", features = ["log"] }

[features]
log = ["dep:log"]
search = ["dep:memmem"]
ignore_incomplete = []
