[package]
name = "klv-uas"
version = "0.1.2"
edition = "2021"
description = "A simple library for parsing UAS KLV data from raw data."
documentation = "https://docs.rs/klv-uas"
repository = "https://github.com/GrimOutlook/klv-uas"
license = "MIT"
keywords = ["klv", "parser", "uas"]
categories = ["aerospace::unmanned-aerial-vehicles", "multimedia::video"]

[dependencies]
bitvec = "1.0.1"
memmem = { version = "0.1.1", default-features = false, optional = true }
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.3"
itertools = "0.13.0"
test-case = "3.3.1"
tracing = "0.1.44"
ts-analyzer = { path = "../ts-analyzer", features = ["tracing"] }

[features]
ignore_incomplete = []
search = ["dep:memmem"]
tracing = ["dep:tracing"]
